# digiNEV

./: .coverage  .dockerignore  .env  .env.template  .envrc  .gitignore  .poetry_auto  .replit  ACADEMIC_USER_GUIDE.md  API_INTEGRATION_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE_FINAL.md  CHANGELOG_v4.9.5.md  CLAUDE.md  CLAUDE_backup.md  CLAUDE_v4.9.7_functional.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.dashboard  ENGLISH_STANDARDIZATION_CHECKLIST.md  ENGLISH_STANDARDIZATION_REPORT.md  ESTRUTURA_PROJETO_v4.6_LIMPO.md  ESTRUTURA_PROJETO_v4.9_ENHANCED.md  GUIA_USO_RAPIDO.md  IMPLEMENTACAO_TAXONOMIA_HIERARQUICA_CONCLUIDA.md  INSTALLATION.md  INTEGRATION_CONFIRMATION.md  INTERNATIONALIZATION_RULES.md  MAINTENANCE.md  PATH_CONFIGURATION.md  PIPELINE_STAGES_ANALYSIS.md  PLANO_REESTRUTURACAO_PIPELINE.md  PROCESSO_ATUAL_PIPELINE.md  PROXIMOS_PASSOS_PLANO.md  README.md  README_ENGLISH.md  RELATORIO_ANALISE_2022-2023.md  RELATORIO_SISTEMA_CHUNKED_FINAL.txt  RELATORIO_VALIDACAO_CHUNKED.txt  (+69 more)
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml
archive/: .env.example.bak  .init.py  .setup.py  CLAUDE_backup_20250928.md  CODE_COMMENTS_IMPROVEMENTS.md  CODIGO_AUDIT_RELATORIO_FINAL.md  COMO_USAR_BATCH_HIBRIDO.md  DEBUGGING_GUIDE.md  LEXICON_INTEGRATION.md  USAGE_GUIDE.md  batch_analysis.py  batch_analysis_fixed.py  batch_hybrid_anthropic.py  clean_batch.py  create_sample_dataset.py  fix_all.md  fix_batch_config.py  integrated_professional_dashboard.py  meu_batch.py  pol_methods_implementation.py  run_analysis.sh  run_batch.py  settings_old.yaml  unified_research_dashboard.py  validate_setup.py
archive/.docs/: API_GUIDE.md
archive/english_standardization/: TRANSLATION_ANALYSIS.md
archive/files/: metodos_aplicaveis_tabela.md  sci_validated_methods_implementation.py
archive/files (1)/: INSTRUCOES_IMPLEMENTACAO.md  batch_validated.py  batch_validated_methods_config.json
attached_assets/: Pasted--M-dulo-com-os-modelos-Pydantic-para-valida-o-dos-arquivos-de-configura-o-Este-m-dulo-central-1757643432187_1757643432187.txt  Pasted--existing-code-import-yaml-from-pathlib-import-Path-import-logging-from-typing-import-Dict--1757643455943_1757643455943.txt  Pasted-Plano-de-Implementa-o-para-Aprimoramento-da-Ferramenta-digiNEV-Este-documento-descreve-o-plano-de-a-1757643412259_1757643412261.txt  Pasted-import-pandas-as-pd-import-plotly-express-as-px-import-plotly-graph-objects-as-go-def-plot-statisti-1757645432306_1757645432306.txt  Pasted-import-streamlit-as-st-import-pandas-as-pd-import-os-from-pathlib-import-Path-Adicionando-o-diret-1757645419762_1757645419763.txt
backup/: BACKUP_SUMMARY.md  RECOVERY_PROCEDURES.md  backup_system.py  backup_validator.py  checkpoint_framework.py  execute_backup.py  execution_report_20250615_085802.json  quick_status_check.py  validation_report_20250615_085802.json  validation_report_20250615_085935.json
checkpoints/: checklist.json  checkpoints.json  pipeline_01_chunk_processing_20250608_053236.json  pipeline_02_encoding_validation_20250608_053236.json  pipeline_03_deduplication_20250608_053247.json  pipeline_04_feature_validation_20250608_053247.json
config/: README.md  academic_optimizations.yaml  academic_settings.yaml  anthropic.yaml.example  anthropic.yaml.template  api_limits.yaml  batch_validated_methods_config.json  brazilian_political_lexicon.yaml  core.yaml  cost_optimization_guide.md  default.yaml  enhanced_model_settings.yaml  logging.yaml  master.yaml  model_upgrade_report.md  network.yaml  paths.yaml  processing.yaml  research.yaml  settings.yaml  settings_ENGLISH.yaml  settings_backup_20250613_183306.yaml  timeline_bolsonaro.md  timeout_management.yaml  voyage_embeddings.yaml  voyage_embeddings.yaml.example  voyage_embeddings.yaml.template  voyage_pricing_analysis.md
data/: README.md  RELATORIO_TESTE_COMPLETO_4_ELEC_20251003.txt  fix_test_data.py  sample_1000_cases_20250928_025745_metadata.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION_SYSTEM_v5.0.md  stage03_deduplication_visualizations.md
documentation/: ARQUITETURA_CENTRALIZADA_2025.md  CONFIGURACAO_ANTHROPIC_2025.md  CONSOLIDACAO_DOCS_2025.md  DETALHES_TECNICOS_IMPLEMENTACAO.md  DOCUMENTACAO_CENTRAL.md  EXECUCAO_PIPELINE_GUIA.md  FUNCIONALIDADES_IMPLEMENTADAS_2025.md  GUIA_IMPLEMENTACAO_STAGES.md  GUIA_RAPIDO_USO.md  GUIDELINES.md  NOVO_FLUXO_FEATURE_EXTRACTION.md  PROJECT_RULES.md  README.md  RESUMO_EXECUTIVO_IMPLEMENTACAO.md  SEMANTIC_SEARCH_IMPLEMENTATION.md  VOYAGE_OPTIMIZATION_SUMMARY.md
examples/: optimization_usage.py  quick_start.py
logs/: anthropic_costs.json
metrics/: ARCHITECT_VERIFICATION_REPORT.md  performance_metrics_20250917_093634.json  performance_metrics_20250917_102347.json  performance_metrics_20250917_104454.json  performance_metrics_20250917_105418.json  performance_metrics_20250917_112607.json  performance_metrics_20250917_115238.json  performance_metrics_20250917_115239.json  performance_metrics_20250917_115933.json  performance_metrics_20260128_005820.json  session_summary_architect_evidence_20250916_234359.json  session_summary_pipeline_20250916_233859.json  session_summary_pipeline_20250917_093630.json  session_summary_pipeline_20250917_102343.json  session_summary_pipeline_20250917_104450.json  session_summary_pipeline_20250917_105415.json  session_summary_pipeline_20250917_112604.json  session_summary_pipeline_20250917_115235.json  session_summary_pipeline_20250917_115930.json  session_summary_pipeline_20260128_005818.json
scripts/: consolidate_model_configs.py  deploy.sh  maintenance_tools.py  validate_enhanced_config.py  validate_enhanced_config_standalone.py  verify_centralized_integration.py
src/: __init__.py  academic_config.py  analyzer.py  check_dataset_columns.py  chunked_analyzer.py  lexicon_loader.py  main.py
src/common/: __init__.py  (+7 more)
tests/: conftest.py  run_tests.py  test_academic_integration.py  test_analysis_modules.py  test_api_integration.py  test_data_processing.py  test_performance.py  test_pipeline_core.py  test_research_pipeline.py  test_system_integration.py
(+293 files in other folders)
