[tool.poetry]
name = "diginev-analyzer"
version = "v.final"
description = "digiNEV v.final - Sistema Consolidado de Análise de Discurso Político Brasileiro"
authors = ["Academic Research Team <research@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
numpy = "^1.24.0"
python-dotenv = "^1.0.0"
spacy = "^3.7.0"
scikit-learn = "^1.3.0"
nltk = "^3.8.0"
anthropic = "^0.18.0"
voyageai = "^0.2.0"
plotly = "^5.14.0"
tqdm = "^4.65.0"
pyyaml = "^6.0"
diskcache = "^5.6.0"
pydantic = "^2.0.0"
streamlit = "^1.28.0"
requests = "^2.31.0"
chardet = "^5.2.0"
hdbscan = "^0.8.33"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.group.academic.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
statsmodels = "^0.14.0"

[tool.poetry.scripts]
diginev = "run_pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"