[tool.poetry]
name = "diginev-v-final"
version = "0.1.0"
description = "digiNEV v.final - Brazilian Political Discourse Analysis System"
authors = ["Academic Research Team <research@diginev.br>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.0"
numpy = "^2.0.0"
python-dotenv = "^1.0.1"
spacy = "^3.7.6"
scikit-learn = "^1.5.0"
nltk = "^3.9.1"
plotly = "^5.24.0"
tqdm = "^4.66.0"
pyyaml = "^6.0.2"
streamlit = "^1.39.0"
requests = "^2.32.0"
chardet = "^5.2.0"
hdbscan = "^0.8.38"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[tool.poetry.group.academic.dependencies]
jupyter = "^1.1.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.4"

[tool.poetry.scripts]
diginev-analyzer = "run_pipeline:main"
diginev-dashboard = "src.dashboard.data_analysis_dashboard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"